2008-10-02  Matthias Clasen <mclasen@redhat.com>

	Merged from trunk:

	530575 – GtkEntry with invisible chars has a confused cursor in
	overwrite mode
	Bug 371908 – Password Entry broken

	* gtk/gtkentry.c (gtk_entry_draw_cursor): Use the visible text
	in the layout when positioning the cursor, not the actual text
	content of the entry. This makes a different when using overwrite
	mode in an invisible entry.
	Problem noticed by Jonathan Blandford

	* gtk/gtkentry.c (gtk_entry_backspace): Make backspace behave
	properly when invisible. 

2008-10-02  Simos Xenitellis  <simos@gnome.org>

        Bug 554506 – combining diacritics broken, became deadkeys

        * gtk/gtkimcontextsimple.c: added check if keysym is greater
        than 0x1000000, in this case it is not a dead key.

2008-10-02  Christian Persch

        Bug 554704 – gtkfilesystemmodel does too much work

        * gtk/gtkfilesystemmodel.c: Replace g_slist_length()<1 check with a
        simple NULL check.

2008-10-02  Christian Persch

        Bug 554701 – filechooser spams console with useless warnings

        * gtk/gtkfilesystem.c.c: Don't warn if the async call was simply
        cancelled.

2008-10-02  Christian Persch

        Bug 554698 – mem leak in filechooser

        * gtk/gtkfilechooserdefault.c: Plug a mem leak.

2008-10-02  Christian Persch

        Bug 554696 – invalid free function used

        * gtk/gtkfilesystemmodel.c: Use the right free func.

2008-10-02  Christian Persch

        Bug 554691 – mem leak in filechooser

        * gtk/gtkfilesystemmodel.c: Plug a mem leak.

2008-10-02  Christian Persch

        Bug 554690 – mem leak in filechooser

        * gtk/gtkfilechooserdefault.c: Plug a mem leak.

2008-10-01  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkscalebutton.c: Don't #define _GNU_SOURCE on Windows as it
	confuses newest mingw headers.

2008-09-29  Richard Hult  <richard@imendio.com>

	Merged from trunk:

	Bug 554141 – uninitialized data use/free in gtkclipboard-quartz.c
