@@ -1,3 +1,12 @@
+2008-10-04  Tor Lillqvist  <tml@novell.com>
+
+	* gdk/win32/gdkmain-win32.c (_gdk_win32_window_exstyle_to_string):
+	New debugging printout function. Decodes the WS_EX_* bits.
+	
+	* gdk/win32/gdkprivate-win32.h: Declare it. Define
+	GDK_DEBUG_MISC_OR_EVENTS for use in GDK_NOTE() to match either
+	"misc" or "events".
+
 2008-10-02  Matthias Clasen <mclasen@redhat.com>
 
 	Merged from trunk:
